--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Металлургический Акселератор</title>
-    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="./static/css/style.css">
 </head>
 <body>
     <header>
@@ -26,14 +26,14 @@
                 <a href="./apply.html" class="cta-button">Подать заявку</a>
             </div>
             <div class="hero__image-container">
-                <img src="../static/images/emojis.com shiny-platinum-metal-ingot.png" class="hero__image">
+                <img src="./static/images/emojis.com shiny-platinum-metal-ingot.png" class="hero__image">
             </div>
         </section>
 
         <section id="about" class="about">
             <div class="about__content">
                 <div class="about__image">
-                    <img src="../static/images/emojis.com aluminium-hat.png" alt="Алюминиевая шляпа">
+                    <img src="./static/images/emojis.com aluminium-hat.png" alt="Алюминиевая шляпа">
                 </div>
                 <div class="about__text">
                     <h2>О нас</h2>
@@ -82,7 +82,7 @@
                     <a href="./apply.html" class="cta-button">Подать заявку</a>
                 </div>
                 <div class="startups__image">
-                    <img src="../static/images/emojis.com man-in-a-suit-climbing-a-metal-ladder.png" alt="Человек в костюме поднимается по металлической лестнице">
+                    <img src="./static/images/emojis.com man-in-a-suit-climbing-a-metal-ladder.png" alt="Человек в костюме поднимается по металлической лестнице">
                 </div>
             </div>
         </section>
@@ -124,7 +124,7 @@
                     </div>
                 </div>
                 <div class="how-it-works__image">
-                    <img src="../static/images/emojis.com metal-star.png" alt="Металлическая звезда">
+                    <img src="./static/images/emojis.com metal-star.png" alt="Металлическая звезда">
                 </div>
             </div>
         </section>
@@ -172,6 +172,6 @@
         <p>&copy; 2024 МеталлАкселератор. Все права защищены.</p>
     </footer>
 
-    <script src="../static/js/main.js"></script>
+    <script src="./static/js/main.js"></script>
 </body>
 </html> 
