--- a/apply.html
+++ b/apply.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Подать заявку - МеталлАкселератор</title>
-    <link rel="stylesheet" href="../static/css/style.css">
-    <link rel="stylesheet" href="../static/css/form.css">
+    <link rel="stylesheet" href="./static/css/style.css">
+    <link rel="stylesheet" href="./static/css/form.css">
 </head>
 <body>
     <header>
@@ -165,6 +165,6 @@
         <p>&copy; 2024 МеталлАкселератор. Все права защищены.</p>
     </footer>
 
-    <script src="../static/js/form.js"></script>
+    <script src="./static/js/form.js"></script>
 </body>
 </html> 
